[package]
name = "md_browser"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "md",
    "browser",
    "server",
    "protocol"
]

[dependencies]
getopts = "0.2"
md_browser_server = { path="server" }
md_browser_browser = { path="browser" }
