[package]
name = "md_browser_server"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "md_browser_server"
path = "src/lib.rs"

[[bin]]
name = "md_browser_server"
path = "src/bin.rs"

[dependencies]
md_browser_protocol = { path="../protocol" }
